aligned all pages correctly

--- a/techjobs-persistent-java-graded/src/main/resources/static/css/bootstrap.css
+++ b/techjobs-persistent-java-graded/src/main/resources/static/css/bootstrap.css
@@ -6757,4 +6757,76 @@ button.close {
     display: none !important;
   }
 }
+
+
+
+.cat-dropdown {
+font size: 4rem;
+text-align: center;
+color: black;}
+
+.navbar{
+display: flex;
+justify-content: center;
+}
+
+.banner-head{
+white-space: nowrap
+display: inline-block;
+}
+
+.nav-link {
+border: 5px;
+border-radius: 16px;
+background-color: #c6d8db;
+border: 1px solid black;
+text-align: center;
+display: inline-block;
+color: black;
+margin-left: 15px;
+font-size: 16px;
+}
+
+.banner-text {
+border: 5px;
+border-radius: 16px;
+background-color: #c6d8db;
+border: 1px solid black;
+text-align: center;
+display: inline-block;
+color: black;
+margin-left: 15px;
+font-size: 16px;
+}
+
+.dropdown {
+border-radius: 6x;
+margin-top: 1rem;
+background-color: #c6d8db;
+position: relative;
+z-index: 100;
+opacity: 0;
+visibility: hidden;
+}
+
+.dropdown-item {
+text-align: left;
+padding: 5px 5px 0 5px}
+
+.dropdown-item:last-child{
+padding-bottom: 5px;
+}
+
+.nav-link:hover .dropdown {
+opacity: 1;
+visibility: visible;
+}
+
+.dropdown-item{
+text-align: left;
+padding: 2rem 2rem 0 2rem;
+}
+
+
+
 /*# sourceMappingURL=bootstrap.css.map */
